--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,26 +1,15 @@
-.accordianheader{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+.toast-message{
+    font-size: 29px;
+    
 }
-.accordian-container{
-  padding: 2% 10%;
-  margin: 4%;
-}
-.accordianitem{
-  border: 2px solid red;
-}
-.symbol{
-   background-color: greenyellow;
-   border-radius: 10%;
-   width: 5%;
-}
-.accordian-detail{
-  width: 100%;
-}
-
-.hidedata{
-   display: none;
-}
-.showdata{
-  display: block;
+.toast {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #333;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
