--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,16 +1,18 @@
-.toast-message{
-    font-size: 29px;
-    
+
+#start-btn{
+  padding: 2% 5%;
 }
-.toast {
-  position: fixed;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: #333;
-  color: #fff;
-  padding: 10px 20px;
-  border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  cursor: pointer;
+#pause-btn{
+  padding: 2% 5%;
+}
+#reset-btn{
+  padding: 2% 5%;
+}
+.buttons{
+  margin: 1%;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+}
+#bar{
+ padding: 4% 6%;
 }
